230105 continued to work on Dashboard & Welcome landing page

--- a/Views/Companies/ManageUserRoles.cshtml
+++ b/Views/Companies/ManageUserRoles.cshtml
@@ -31,7 +31,7 @@
 
 <div class="card">
     <div class="card-body">
-        <p class="textItalics">Select the roles of the members of your company. Then, click "Assign Role" when you're finished.</p>
+        <p class="textItalics">Select the roles for the members of your company. Then, click "Assign Role" when you're finished.</p>
         <table id="membersTable" class="table table-striped table-bordered">
             <thead>
                 <tr>
