--- a/Views/Shared/_LoginLayout.cshtml
+++ b/Views/Shared/_LoginLayout.cshtml
@@ -36,6 +36,14 @@
 </head>
 
 <body>
+
+    <!-- Preloader -->
+    @*<div class="preloader">
+        <div class="preloader-icon"></div>
+        <span>Loading...</span>
+    </div>*@
+    <!-- ./ Preloader -->
+
     <!-- Content body -->
     <div class="content-body">
         <!-- Content -->
