--- a/Views/Shared/_LayoutLanding.cshtml
+++ b/Views/Shared/_LayoutLanding.cshtml
@@ -15,6 +15,11 @@
     <!-- Bootstrap Icons -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.2/font/bootstrap-icons.css">
 
+    <!-- Devicons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css" />
+
     <!-- ------------------------------------------ Gogi stylesheets start ----------------------------------------------- -->
     <!-- Favicon -->
     <link rel="shortcut icon" href="~/assets/media/image/favicon.png" />
@@ -34,6 +39,16 @@
     <!-- App css -->
     <link rel="stylesheet" href="~/assets/css/app.min.css" type="text/css">
     <!-- ------------------------------------------ Gogi stylesheets end ------------------------------------------------- -->
+
+    <!-- ------------------------------------------ Plank start ----------------------------------------------- -->
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@200;300;400;500;700&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+          integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="~/plank/library/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="~/plank/css/styles.css" />
+    <!-- ------------------------------------------ Plank end ------------------------------------------------- -->
+
     <!-- Custom CSS -->
     <link rel="stylesheet" href="/css/site.css" />
 </head>
@@ -57,231 +72,19 @@
         <span>Loading...</span>
     </div>
     <!-- ./ Preloader -->
-    <!-- Layout wrapper -->
-    <div class="layout-wrapper">
 
-        <!-- Header -->
-        <div class="header d-print-none">
-            <div class="header-container">
-                <div class="header-left">
-                    <div class="navigation-toggler">
-                        <a href="#" data-action="navigation-toggler">
-                            <i data-feather="menu"></i>
-                        </a>
-                    </div>
+    <!-- Content body -->
+    <div class="content-body">
+        <!-- Content -->
+        <div class="content ">
 
-                    <div class="header-logo">
-                        <a asp-action="Index" asp-controller="Home">
-                            <img class="logo" src="~/img/InsectCrusherLogo_500.png" class="img-fluid" style="max-height: 75px;" alt="logo">
-                        </a>
-                    </div>
-                </div>
+            @RenderBody()
 
-                <div class="header-body">
-                    <div class="header-body-left">
-                        <ul class="navbar-nav">
-                            <li class="nav-item mr-3">
-                                <div class="header-search-form">
-                                    <form>
-                                        <div class="input-group">
-                                            <div class="input-group-prepend">
-                                                <button class="btn">
-                                                    <i data-feather="search"></i>
-                                                </button>
-                                            </div>
-                                            <input type="text" class="form-control" placeholder="Search">
-                                            <div class="input-group-append">
-                                                <button class="btn header-search-close-btn">
-                                                    <i data-feather="x"></i>
-                                                </button>
-                                            </div>
-                                        </div>
-                                    </form>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-
-                    <div class="header-body-right">
-                        <ul class="navbar-nav">
-                            <li class="nav-item">
-                                <a href="#" class="nav-link mobile-header-search-btn" title="Search">
-                                    <i data-feather="search"></i>
-                                </a>
-                            </li>
-
-                            <li class="nav-item dropdown d-none d-md-block">
-                                <a href="#" class="nav-link" title="Fullscreen" data-toggle="fullscreen">
-                                    <i class="maximize" data-feather="maximize"></i>
-                                    <i class="minimize" data-feather="minimize"></i>
-                                </a>
-                            </li>
-
-                            <!-- Notifications -->
-                            <li class="nav-item dropdown">
-                                <a href="#" class="nav-link nav-link-notify" title="Notifications" data-toggle="dropdown">
-                                    <i data-feather="bell"></i>
-                                </a>
-                                <div class="dropdown-menu dropdown-menu-right dropdown-menu-big">
-                                    <div class="border-bottom px-4 py-3 text-center d-flex justify-content-between align-items-center">
-                                        <h5 class="mb-0">Notifications</h5>
-                                        <small class="opacity-7">2   unread notifications</small>
-                                    </div>
-                                    <div class="dropdown-scroll">
-                                        <ul class="list-group list-group-flush">
-                                            <li class="px-4 py-2 text-center small text-muted bg-light">Today</li>
-                                            <li class="px-4 py-3 list-group-item">
-                                                <a href="#" class="d-flex align-items-center hide-show-toggler">
-                                                    <div class="flex-shrink-0">
-                                                        <figure class="avatar mr-3">
-                                                            <span class="avatar-title bg-info-bright text-info rounded-circle">
-                                                                <i class="ti-lock"></i>
-                                                            </span>
-                                                        </figure>
-                                                    </div>
-                                                    <div class="flex-grow-1">
-                                                        <p class="mb-0 line-height-20 d-flex justify-content-between">
-                                                            2 steps verification
-                                                            <i title="Mark as read" data-toggle="tooltip"
-                                                               class="hide-show-toggler-item fa fa-circle-o font-size-11"></i>
-                                                        </p>
-                                                        <span class="text-muted small">20 min ago</span>
-                                                    </div>
-                                                </a>
-                                            </li>
-                                            <li class="px-4 py-3 list-group-item">
-                                                <a href="#" class="d-flex align-items-center hide-show-toggler">
-                                                    <div class="flex-shrink-0">
-                                                        <figure class="avatar mr-3">
-                                                            <span class="avatar-title bg-warning-bright text-warning rounded-circle">
-                                                                <i class="ti-server"></i>
-                                                            </span>
-                                                        </figure>
-                                                    </div>
-                                                    <div class="flex-grow-1">
-                                                        <p class="mb-0 line-height-20 d-flex justify-content-between">
-                                                            Storage is running low!
-                                                            <i title="Mark as read" data-toggle="tooltip"
-                                                               class="hide-show-toggler-item fa fa-circle-o font-size-11"></i>
-                                                        </p>
-                                                        <span class="text-muted small">45 sec ago</span>
-                                                    </div>
-                                                </a>
-                                            </li>
-                                            <li class="px-4 py-2 text-center small text-muted bg-light">Old Notifications</li>
-                                            <li class="px-4 py-3 list-group-item">
-                                                <a href="#" class="d-flex align-items-center hide-show-toggler">
-                                                    <div class="flex-shrink-0">
-                                                        <figure class="avatar mr-3">
-                                                            <span class="avatar-title bg-secondary-bright text-secondary rounded-circle">
-                                                                <i class="ti-file"></i>
-                                                            </span>
-                                                        </figure>
-                                                    </div>
-                                                    <div class="flex-grow-1">
-                                                        <p class="mb-0 line-height-20 d-flex justify-content-between">
-                                                            1 person sent a file
-                                                            <i title="Mark as unread" data-toggle="tooltip"
-                                                               class="hide-show-toggler-item fa fa-check font-size-11"></i>
-                                                        </p>
-                                                        <span class="text-muted small">Yesterday</span>
-                                                    </div>
-                                                </a>
-                                            </li>
-                                            <li class="px-4 py-3 list-group-item">
-                                                <a href="#" class="d-flex align-items-center hide-show-toggler">
-                                                    <div class="flex-shrink-0">
-                                                        <figure class="avatar mr-3">
-                                                            <span class="avatar-title bg-success-bright text-success rounded-circle">
-                                                                <i class="ti-download"></i>
-                                                            </span>
-                                                        </figure>
-                                                    </div>
-                                                    <div class="flex-grow-1">
-                                                        <p class="mb-0 line-height-20 d-flex justify-content-between">
-                                                            Reports ready to download
-                                                            <i title="Mark as unread" data-toggle="tooltip"
-                                                               class="hide-show-toggler-item fa fa-check font-size-11"></i>
-                                                        </p>
-                                                        <span class="text-muted small">Yesterday</span>
-                                                    </div>
-                                                </a>
-                                            </li>
-                                            <li class="px-4 py-3 list-group-item">
-                                                <a href="#" class="d-flex align-items-center hide-show-toggler">
-                                                    <div class="flex-shrink-0">
-                                                        <figure class="avatar mr-3">
-                                                            <span class="avatar-title bg-primary-bright text-primary rounded-circle">
-                                                                <i class="ti-arrow-top-right"></i>
-                                                            </span>
-                                                        </figure>
-                                                    </div>
-                                                    <div class="flex-grow-1">
-                                                        <p class="mb-0 line-height-20 d-flex justify-content-between">
-                                                            The invitation has been sent.
-                                                            <i title="Mark as unread" data-toggle="tooltip"
-                                                               class="hide-show-toggler-item fa fa-check font-size-11"></i>
-                                                        </p>
-                                                        <span class="text-muted small">Last Week</span>
-                                                    </div>
-                                                </a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                    <div class="px-4 py-3 text-right border-top">
-                                        <ul class="list-inline small">
-                                            <li class="list-inline-item mb-0">
-                                                <a href="#">Mark All Read</a>
-                                            </li>
-                                        </ul>
-                                    </div>
-                                </div>
-                            </li>
-
-                            <partial name="_LoginPartial" />
-                        </ul>
-                    </div>
-                </div>
-
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item header-toggler">
-                        <a href="#" class="nav-link">
-                            <i data-feather="arrow-down"></i>
-                        </a>
-                    </li>
-                </ul>
-            </div>
         </div>
-        <!-- ./ Header -->
-        <!-- Content wrapper -->
-        <div class="content-wrapper">
-
-            <partial name="_Sidebar" />
-
-            <!-- Content body -->
-            <div class="content-body">
-                <!-- Content -->
-                <div class="content ">
-
-                    @RenderBody()
-
-                </div>
-                <!-- ./ Content -->
-                <!-- Footer -->
-                <footer class="content-footer">
-                    <div>System Created by Tom Nguyen | All Rights Reserved &copy; 2022</div>
-                    <div>
-                        <a href="https://www.linkedin.com/in/txn9517"><i class="bi bi-linkedin px-2 socialIcons"></i></a>
-                        <a href="https://github.com/tn2690/"><i class="bi bi-github socialIcons"></i></a>
-                    </div>
-                </footer>
-                <!-- ./ Footer -->
-            </div>
-            <!-- ./ Content body -->
-        </div>
-        <!-- ./ Content wrapper -->
+        <!-- ./ Content -->
     </div>
-    <!-- ./ Layout wrapper -->
+    <!-- ./ Content body -->
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 
@@ -308,6 +111,14 @@
     <script src="~/vendors/ckeditor5/ckeditor.js"></script>
 
     <!-- ------------------- Gogi scripts end ----------------------------- -->
+
+    <!-- ------------------- Plank scripts start ----------------------------- -->
+    <script src="~/plank/library/bootstrap/js/bootstrap.bundle.min.js"></script>
+    <script src="~/plank/library/jquery-3.6.0.min.js"></script>
+
+    <script src="~/plank/script.js"></script>
+    <!-- ------------------- Plank scripts end ----------------------------- -->
+
     <!-- Sweet Alerts -->
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
