--- a/Views/Projects/AddMembers.cshtml
+++ b/Views/Projects/AddMembers.cshtml
@@ -32,6 +32,7 @@
         <div class="card">
             <div class="card-header">
                 <div class="card-title">Project: @Model.Project!.Name</div>
+                <p class="textItalics">Select the developers and submitters for the project. Then, click "Save" when you're finished.</p>
             </div>
             <div class="card-body">
                 <div class="col-12 col-lg-12">
