--- a/Views/Shared/_LoginLayout.cshtml
+++ b/Views/Shared/_LoginLayout.cshtml
@@ -38,10 +38,10 @@
 <body>
 
     <!-- Preloader -->
-    @*<div class="preloader">
+    <div class="preloader">
         <div class="preloader-icon"></div>
         <span>Loading...</span>
-    </div>*@
+    </div>
     <!-- ./ Preloader -->
 
     <!-- Content body -->
@@ -56,6 +56,37 @@
 
     </div>
     <!-- ./ Content body -->
+
+    <!-- ------------------- Gogi scripts start ----------------------------- -->
+    <!-- Main scripts -->
+    <script src="~/vendors/bundle.js"></script>
+
+    <!-- Apex chart -->
+    <script src="~/vendors/charts/apex/apexcharts.min.js"></script>
+
+    <!-- Daterangepicker -->
+    <script src="~/vendors/datepicker/daterangepicker.js"></script>
+
+    <!-- DataTable -->
+    <script src="~/vendors/dataTable/datatables.min.js"></script>
+
+    <!-- Dashboard scripts -->
+    <script src="~/assets/js/examples/pages/dashboard.js"></script>
+
+    <!-- App scripts -->
+    <script src="~/assets/js/app.min.js"></script>
+
+    <!-- Javascript -->
+    <script src="~/vendors/ckeditor5/ckeditor.js"></script>
+
+    <!-- ChartJS -->
+    <script src="~/vendors/charts/chartjs/chart.min.js"></script>
+    <script src="~/assets/js/examples/charts/chartjs.js"></script>
+
+    <!--Google Charts -->
+    <script type="text/javascript" src="https://www.google.com/jsapi"></script>
+
+    <!-- ------------------- Gogi scripts end ----------------------------- -->
 
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
