--- a/Views/Shared/_Sidebar.cshtml
+++ b/Views/Shared/_Sidebar.cshtml
@@ -22,7 +22,7 @@
         <!-- Dashboard -->
         <ul>
             <li>
-                <a class="@(controller == "Home" ? "active" : "")" asp-action="Index" asp-controller="Home">
+                <a class="@(controller == "Home" ? "active" : "")" asp-action="Dashboard" asp-controller="Home">
                     <span class="nav-link-icon">
                         <i data-feather="bar-chart"></i>
                     </span>
