--- a/Views/Projects/AssignProjectManager.cshtml
+++ b/Views/Projects/AssignProjectManager.cshtml
@@ -32,6 +32,7 @@
     <div class="card">
         <div class="card-header">
             <div class="card-title">Project: @Model.Project!.Name</div>
+            <p class="textItalics">Assign a project manager for this project. Then, click "Save" when you're finished.</p>
         </div>
         <div class="card-body">
             <form asp-action="AssignProjectManager" method="post" class="d-flex flex-column">
