--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -72,7 +72,7 @@
                     </div>
 
                     <div class="header-logo">
-                        <a asp-action="Index" asp-controller="Home">
+                        <a asp-action="Dashboard" asp-controller="Home">
                             <img class="logo" src="~/img/InsectCrusherLogo_500.png" class="img-fluid" style="max-height: 75px;" alt="logo">
                         </a>
                     </div>
