230301 fixed issue w/ adding comments & attachments

--- a/Views/Companies/Details.cshtml
+++ b/Views/Companies/Details.cshtml
@@ -19,10 +19,10 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <a asp-action="Index" asp-controller="Home">Home</a>
+                    <a asp-action="Dashboard" asp-controller="Home">Home</a>
                 </li>
                 <li class="breadcrumb-item">
-                    <a href="#">Company</a>
+                    <a>Company</a>
                 </li>
                 <li class="breadcrumb-item active" aria-current="page">Company Info</li>
             </ol>
