--- a/Views/Home/Dashboard.cshtml
+++ b/Views/Home/Dashboard.cshtml
@@ -93,20 +93,20 @@
 <div class="row gy-2">
     <div class="col-md-12 col">
         <div class="row col-cols-4 mt-5">
-            <div class="card col m-1 p-2">
-	            <div class="card-body">
+            <div class="card col-md-3 col-sm-12">
+	            <div>
 		            <h5>Projects by Priority</h5>
 		            <div id="chart3D"></div>
 	            </div>
             </div>
-            <div class="card col m-1 p-2">
-	            <div class="card-body">
+            <div class="card col-md-3 col-sm-12">
+	            <div>
 		            <h5>Project Tickets Count (%)</h5>
 		            <div id="donut"></div>
 	            </div>
             </div>
-            <div class="card col m-1 p-2">
-                <div class="card-body">
+            <div class="card col-md-3 col-sm-12">
+                <div>
                     <h5>Tickets by Priority</h5>
                     <!-- Morris: Donut -->
                     <div class="col-md-12">
@@ -117,8 +117,8 @@
                     </div>
                 </div>
             </div>
-            <div class="card col m-1 p-2">
-                <div class="card-body">
+            <div class="card col-md-3 col-sm-12">
+                <div>
                     <h5>Tickets by Status</h5>
                     <!-- ChartJS: Pie/Doughnut -->
                     <div class="col-md-12">
@@ -133,7 +133,7 @@
 
 <div class="row gy-2">
     <div class="cols mt-5">
-        <div class="card col m-1 p-2">
+        <div class="card col">
             <div class="card-body" style="height:600px;overflow-y:auto;">
                 <h5>Project: Tickets vs Developers</h5>
                 <!-- HTML -->
