--- a/Views/Tickets/Create.cshtml
+++ b/Views/Tickets/Create.cshtml
@@ -15,7 +15,7 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <a asp-action="Index" asp-controller="Home">Home</a>
+                    <a asp-action="Dashboard" asp-controller="Home">Home</a>
                 </li>
                 <li class="breadcrumb-item">
                     <a asp-action="AllTickets">Tickets</a>
