--- a/Views/Companies/ManageUserRoles.cshtml
+++ b/Views/Companies/ManageUserRoles.cshtml
@@ -18,10 +18,10 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <a asp-action="Index" asp-controller="Home">Home</a>
+                    <a asp-action="Dashboard" asp-controller="Home">Home</a>
                 </li>
                 <li class="breadcrumb-item">
-                    <a href="#">Company</a>
+                    <a>Company</a>
                 </li>
                 <li class="breadcrumb-item active" aria-current="page">Manage User Roles</li>
             </ol>
@@ -54,10 +54,10 @@
                                 @viewModel.BTUser!.FullName
                         </td>
                         <td>
-                            @*<select asp-for="@viewModel.SelectedRoles" class="form-control" style="height: 100px;" asp-items="@viewModel.Roles">
-                            </select>*@
-                            <select asp-for="@viewModel.SelectedRoles" class="custom-select custom-select-lg mb-3" asp-items="@viewModel.Roles">
+                            <select asp-for="@viewModel.SelectedRoles" class="custom-select custom-select-lg mb-3" style="height: 100px;" asp-items="@viewModel.Roles">
                             </select>
+                            @*<select class="custom-select custom-select-lg mb-3" asp-items="@viewModel.Roles" asp-for="@viewModel.SelectedRoles">
+                            </select>*@
                         </td>
                         <td>
                             <div class="form-group">
