--- a/Views/Projects/Details.cshtml
+++ b/Views/Projects/Details.cshtml
@@ -25,7 +25,7 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <a asp-action="Index" asp-controller="Home">Home</a>
+                    <a asp-action="Dashboard" asp-controller="Home">Home</a>
                 </li>
                 <li class="breadcrumb-item">
                     <a asp-action="AllProjects">Projects</a>
