--- a/Views/Tickets/Restore.cshtml
+++ b/Views/Tickets/Restore.cshtml
@@ -12,7 +12,7 @@
         <nav aria-label="breadcrumb">
             <ol class="breadcrumb">
                 <li class="breadcrumb-item">
-                    <a asp-action="Index" asp-controller="Home">Home</a>
+                    <a asp-action="Dashboard" asp-controller="Home">Home</a>
                 </li>
                 <li class="breadcrumb-item">
                     <a asp-action="ArchivedTickets">Archived Tickets</a>
@@ -64,7 +64,7 @@
         <form class="d-flex justify-content-between" asp-action="Restore" asp-route-id="@Model.Id">
             <input hidden asp-for="Id" />
             <a asp-action="Details" asp-route-id="@Model.Id" class="btn btn-outline-secondary rounded-pill">Back to Ticket Details</a>
-            <button type="submit" class="btn btn-success rounded-pill">Restore</button>
+            <button type="submit" class="btn btn-outline-success rounded-pill">Restore</button>
         </form>
     </div>
 </div>
