230501 re-deploy app

--- a/Views/Notifications/Index.cshtml
+++ b/Views/Notifications/Index.cshtml
@@ -22,7 +22,7 @@
                     <a asp-action="Index" asp-controller="Home">Home</a>
                 </li>
                 <li class="breadcrumb-item">
-                    <a href="#">Notifications</a>
+                    <a>Notifications</a>
                 </li>
                 <li class="breadcrumb-item active" aria-current="page">All Notifications</li>
             </ol>
