231218 updated Footer sections

--- a/Views/Home/Welcome.cshtml
+++ b/Views/Home/Welcome.cshtml
@@ -90,7 +90,7 @@
     <footer class="border-top footer container-fluid">
         <div class="row align-items-center">
             <div class="col-12 col-md-4 order-last order-md-first text-center text-md-start">
-                <div class="copyright">&copy; 2022 Tom Nguyen All Rights Reserved</div>
+                <div class="copyright">&copy; 2022-23 Tom Nguyen All Rights Reserved</div>
             </div>
             <div class="col-12 col-md-4 d-flex justify-content-center order-0 order-md-2">
                 <img src="~/img/InsectCrusherLogo_250.png" height="50" />
