--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -154,7 +154,7 @@
 
                 <!-- Footer -->
                 <footer class="content-footer">
-                    <div>System Created by Tom Nguyen | All Rights Reserved &copy; 2022</div>
+                    <div>System Created by Tom Nguyen | All Rights Reserved &copy; 2022-23</div>
                     <div>
                         <a href="https://www.linkedin.com/in/txn9517"><i class="bi bi-linkedin px-2 socialIcons"></i></a>
                         <a href="https://github.com/tn2690/"><i class="bi bi-github socialIcons"></i></a>
